Fake SPA cleanup 1

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -28,7 +28,7 @@ layout: null
         </p>
     </nav>
     <main>
-        <iframe src="./Home.html" name="bottom" title="Wiki contents" sandbox="allow-same-origin allow-scripts" width="100%" height="100%"></iframe>
+        <iframe src="./Home.html#_frequently_asked_questions_faq" name="bottom" title="Wiki contents" sandbox="allow-same-origin allow-scripts" width="100%" height="100%"></iframe>
     </main>
     <script src="{{ '/js/wiki_fake_spa.js' | relative_url }}"></script>
 </body>
