--- a/wiki/index.html
+++ b/wiki/index.html
@@ -9,6 +9,16 @@ layout: null
 <head>
     {%- include head_common.html -%}
     <title>DOSBox-X Wiki</title>
+    <style>
+        #wiki-try-reloading {
+            position: fixed;
+            text-align: center; vertical-align: middle;
+            top: 50%; left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: -1;
+            color: #555; opacity: 0.8;
+        }
+    </style>
 </head>
 
 <body class="wiki-index-html">
@@ -28,9 +38,13 @@ layout: null
         </p>
     </nav>
     <main>
-        <iframe src="./Home" name="bottom" title="Wiki contents" sandbox="allow-same-origin allow-scripts" width="100%" height="100%"></iframe>
+        <span id="wiki-try-reloading">If the contents don't load, try reloading the page.</span>
+        <noscript><iframe name="bottom" src="./Home" title="Wiki contents" sandbox="allow-same-origin allow-scripts" width="100%" height="100%"></iframe></noscript>
     </main>
-    <script src="{{ '/js/wiki_fake_spa.js' | relative_url }}"></script>
+    <template id="empty-iframe">
+        <iframe name="bottom" title="Wiki contents" sandbox="allow-same-origin allow-scripts" width="100%" height="100%"></iframe>
+    </template>
+    <script type="text/javascript" src="{{ '/js/wiki_fake_spa.js' | relative_url }}"></script>
 </body>
 
 </html>
