--- a/wiki/index.html
+++ b/wiki/index.html
@@ -39,10 +39,10 @@ layout: null
     </nav>
     <main>
         <span id="wiki-try-reloading">If the contents don't load, try reloading the page.</span>
-        <noscript><iframe name="bottom" src="./Home" title="Wiki contents" sandbox="allow-same-origin allow-scripts" width="100%" height="100%"></iframe></noscript>
+        <noscript><iframe name="bottom" src="./Home" title="Wiki contents" sandbox="allow-same-origin allow-scripts allow-top-navigation" width="100%" height="100%"></iframe></noscript>
     </main>
     <template id="empty-iframe">
-        <iframe name="bottom" title="Wiki contents" sandbox="allow-same-origin allow-scripts" width="100%" height="100%"></iframe>
+        <iframe name="bottom" title="Wiki contents" sandbox="allow-same-origin allow-scripts allow-top-navigation" width="100%" height="100%"></iframe>
     </template>
     <script type="text/javascript" src="{{ '/js/wiki_fake_spa.js' | relative_url }}"></script>
 </body>
