Leave even more room for actual content in the wiki index

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -13,18 +13,11 @@ layout: null
 
 <body class="wiki-index-html">
     <nav>
-        <p><strong>Welcome to the DOSBox-X Wiki!</strong></p>
         <p>
             <strong>
-                <a href="./Home.html" target="bottom">Wiki welcome page</a> &nbsp;
-                <a href="./guides.html" target="bottom">List of Wiki guide pages</a> &nbsp;
-                <a href="{{ '/' | relative_url }}">DOSBox-X project homepage</a> &nbsp;
-                <a href="https://github.com/joncampbell123/dosbox-x/issues">DOSBox-X issue tracker</a>
+                <a href="./Home" target="bottom">Home page</a> |
+                <a href="./guides.html" target="bottom">List of guide pages</a>
             </strong>
-        </p>
-        <p>
-            Hint: To locate specific information on any Wiki page, you can use Ctrl+F (Command+F on a Mac) to
-            search for text in your browser.
         </p>
     </nav>
     <main>
