Rename guides doc

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -15,7 +15,8 @@ layout: null
     <nav>
         <p>
             <strong>
-                <a href="./Home" target="bottom">Home page</a> |
+                <a href="{{ '/' | relative_url }}">Go back to site home page</a> |
+                <a href="./Home" target="bottom">Wiki home page</a> |
                 <a href="./guides.html" target="bottom">List of guide pages</a>
             </strong>
         </p>
