--- a/wiki/index.html
+++ b/wiki/index.html
@@ -13,13 +13,9 @@ layout: null
 
 <body class="wiki-index-html">
     <nav>
-        <p>
-            <strong>
-                <a href="{{ '/' | relative_url }}">Go back to site home page</a> |
-                <a href="./Home" target="bottom">Wiki home page</a> |
-                <a href="./guides.html" target="bottom">List of guide pages</a>
-            </strong>
-        </p>
+        <span><a href="{{ '/' | relative_url }}">Go back to site home page</a></span>&nbsp;
+        <span><a href="./Home" target="bottom">Wiki home page</a> | <a href="./guides.html" target="bottom">List of guide pages</a></span>
+        <span>&nbsp;</span>
     </nav>
     <main>
         <span id="wiki-try-reloading">If the contents don't load, try reloading the page.</span>
