fix guides page name

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -14,7 +14,7 @@ layout: null
 <body class="wiki-index-html">
     <nav>
         <span><a href="{{ '/' | relative_url }}">Go back to site home page</a></span>&nbsp;
-        <span><a href="./Home" target="bottom">Wiki home page</a> | <a href="./guides.html" target="bottom">List of guide pages</a></span>
+        <span><a href="./Home" target="bottom">Wiki home page</a> | <a href="./List-of-Guide-Pages" target="bottom">List of guide pages</a></span>
         <span>&nbsp;</span>
     </nav>
     <main>
