--- a/wiki/List-of-Guide-Pages.html
+++ b/wiki/List-of-Guide-Pages.html
@@ -48,115 +48,115 @@
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_ms_dos_or_pc_dos_in_dosbox_x"><a href="Guide:DOS-Installation-in-DOSBox‐X">Guide: MS-DOS or PC DOS in DOSBox-X</a></h3>
+<h3 id="_guide_ms_dos_or_pc_dos_in_dosbox_x"><a href="Guide%3ADOS-Installation-in-DOSBox‐X">Guide: MS-DOS or PC DOS in DOSBox-X</a></h3>
 <div class="paragraph">
 <p>Explains how to boot MS-DOS and PC DOS versions in DOSBox-X, including creating hard disk images.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_microsoft_windows_in_dosbox_x"><a href="Guide:Microsoft-Windows-in-DOSBox‐X">Guide: Microsoft Windows in DOSBox-X</a></h3>
+<h3 id="_guide_microsoft_windows_in_dosbox_x"><a href="Guide%3AMicrosoft-Windows-in-DOSBox‐X">Guide: Microsoft Windows in DOSBox-X</a></h3>
 <div class="paragraph">
 <p>Explains how to install and run Microsoft Windows 1.x/2.0/3.x and 9x/ME in DOSBox-X.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_dos_games_in_dosbox_x"><a href="Guide:DOS-games-in-DOSBox‐X">Guide: DOS games in DOSBox-X</a></h3>
+<h3 id="_guide_dos_games_in_dosbox_x"><a href="Guide%3ADOS-games-in-DOSBox‐X">Guide: DOS games in DOSBox-X</a></h3>
 <div class="paragraph">
 <p>Explains how to setup and play DOS games in DOSBox-X.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_dos_demoscene_software_in_dosbox_x"><a href="Guide:DOS-demoscene-software-in-DOSBox‐X">Guide: DOS demoscene software in DOSBox-X</a></h3>
+<h3 id="_guide_dos_demoscene_software_in_dosbox_x"><a href="Guide%3ADOS-demoscene-software-in-DOSBox‐X">Guide: DOS demoscene software in DOSBox-X</a></h3>
 <div class="paragraph">
 <p>Explains how to use DOSBox-X with DOS software from the demoscene.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_selecting_a_video_adapter_in_dosbox_x"><a href="Guide:Video-card-support-in-DOSBox‐X">Guide: Selecting a video adapter in DOSBox-X</a></h3>
+<h3 id="_guide_selecting_a_video_adapter_in_dosbox_x"><a href="Guide%3AVideo-card-support-in-DOSBox‐X">Guide: Selecting a video adapter in DOSBox-X</a></h3>
 <div class="paragraph">
 <p>Explains about the different video modes as supported in DOSBox-X.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_selecting_an_audio_option_in_dosbox_x"><a href="Guide:Sound-card-support-in-DOSBox‐X">Guide: Selecting an audio option in DOSBox-X</a></h3>
+<h3 id="_guide_selecting_an_audio_option_in_dosbox_x"><a href="Guide%3ASound-card-support-in-DOSBox‐X">Guide: Selecting an audio option in DOSBox-X</a></h3>
 <div class="paragraph">
 <p>Explains about the different audio options supported in DOSBox-X.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_pc_98_emulation_in_dosbox_x"><a href="Guide:PC‐98-emulation-in-DOSBox‐X">Guide: PC-98 emulation in DOSBox-X</a></h3>
+<h3 id="_guide_pc_98_emulation_in_dosbox_x"><a href="Guide%3APC‐98-emulation-in-DOSBox‐X">Guide: PC-98 emulation in DOSBox-X</a></h3>
 <div class="paragraph">
 <p>Explains DOSBox-X&#8217;s PC-98 system and how to use it to run PC-98 games or applications in DOSBox-X.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_using_truetype_font_output_in_dosbox_x"><a href="Guide:Using-TrueType-font-output-in-DOSBox‐X.html">Guide: Using TrueType font output in DOSBox-X</a></h3>
+<h3 id="_guide_using_truetype_font_output_in_dosbox_x"><a href="Guide%3AUsing-TrueType-font-output-in-DOSBox‐X.html">Guide: Using TrueType font output in DOSBox-X</a></h3>
 <div class="paragraph">
 <p>Explains DOSBox-X’s TrueType font (TTF) output, which is very useful for text-mode DOS applications.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_managing_image_files_in_dosbox_x"><a href="Guide:Managing-image-files-in-DOSBox‐X">Guide: Managing image files in DOSBox-X</a></h3>
+<h3 id="_guide_managing_image_files_in_dosbox_x"><a href="Guide%3AManaging-image-files-in-DOSBox‐X">Guide: Managing image files in DOSBox-X</a></h3>
 <div class="paragraph">
 <p>Explains how to make and use floppy, hard disk, and optical disc images in DOSBox-X.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_clipboard_support_in_dosbox_x"><a href="Guide:Clipboard-support-in-DOSBox‐X">Guide: Clipboard support in DOSBox-X</a></h3>
+<h3 id="_guide_clipboard_support_in_dosbox_x"><a href="Guide%3AClipboard-support-in-DOSBox‐X">Guide: Clipboard support in DOSBox-X</a></h3>
 <div class="paragraph">
 <p>Explains the different ways to copy to and paste from the Windows clipboard in DOSBox-X.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_cpu_settings_in_dosbox_x"><a href="Guide:CPU-settings-in-DOSBox‐X">Guide: CPU settings in DOSBox-X</a></h3>
+<h3 id="_guide_cpu_settings_in_dosbox_x"><a href="Guide%3ACPU-settings-in-DOSBox‐X">Guide: CPU settings in DOSBox-X</a></h3>
 <div class="paragraph">
 <p>Explains the CPU emulation and different CPU types in DOSBox-X.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_regional_settings_in_dosbox_x"><a href="Guide:Regional-settings-in-DOSBox‐X">Guide: Regional settings in DOSBox-X</a></h3>
+<h3 id="_guide_regional_settings_in_dosbox_x"><a href="Guide%3ARegional-settings-in-DOSBox‐X">Guide: Regional settings in DOSBox-X</a></h3>
 <div class="paragraph">
 <p>Explains how to customize DOSBox-X&#8217;s regional settings and international support, such as display languages and keyboard layouts.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_east_asian_language_support_in_dosboxx"><a href="Guide:East-Asian-language-support-in-DOSBox‐X">Guide: East Asian language support in DOSBox‐X</a></h3>
+<h3 id="_guide_east_asian_language_support_in_dosboxx"><a href="Guide%3AEast-Asian-language-support-in-DOSBox‐X">Guide: East Asian language support in DOSBox‐X</a></h3>
 <div class="paragraph">
 <p>Explains DOSBox-X&#8217;s support for East Asian (Chinese, Japanese, Korean) languages and systems.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_setting_up_joysticks_in_dosbox_x"><a href="Guide:Setting-up-joysticks-in-DOSBox‐X">Guide: Setting up joysticks in DOSBox-X</a></h3>
+<h3 id="_guide_setting_up_joysticks_in_dosbox_x"><a href="Guide%3ASetting-up-joysticks-in-DOSBox‐X">Guide: Setting up joysticks in DOSBox-X</a></h3>
 <div class="paragraph">
 <p>Explains the different Joystick configuration options in DOSBox-X.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_mouse_support_in_dosbox_x"><a href="Guide:Mouse-support-in-DOSBox‐X">Guide: Mouse support in DOSBox-X</a></h3>
+<h3 id="_guide_mouse_support_in_dosbox_x"><a href="Guide%3AMouse-support-in-DOSBox‐X">Guide: Mouse support in DOSBox-X</a></h3>
 <div class="paragraph">
 <p>Explains DOSBox-X’s mouse emulation options.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_setting_up_3dfx_voodoo_in_dosbox_x"><a href="Guide:Setting-up-3dfx-Voodoo-in-DOSBox‐X">Guide: Setting up 3dfx Voodoo in DOSBox-X</a></h3>
+<h3 id="_guide_setting_up_3dfx_voodoo_in_dosbox_x"><a href="Guide%3ASetting-up-3dfx-Voodoo-in-DOSBox‐X">Guide: Setting up 3dfx Voodoo in DOSBox-X</a></h3>
 <div class="paragraph">
 <p>Explains the emulation of 3dfx Voodoo, using either the Voodoo hardware emulation or the Glide API passthrough.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_setting_up_midi_in_dosbox_x"><a href="Guide:Setting-up-MIDI-in-DOSBox‐X">Guide: Setting up MIDI in DOSBox-X</a></h3>
+<h3 id="_guide_setting_up_midi_in_dosbox_x"><a href="Guide%3ASetting-up-MIDI-in-DOSBox‐X">Guide: Setting up MIDI in DOSBox-X</a></h3>
 <div class="paragraph">
 <p>Explains how to set up and use DOSBox-X&#8217;s MIDI feature, such as General MIDI and Roland MT-32 emulations.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_setting_up_printing_in_dosbox_x"><a href="Guide:Setting-up-printing-in-DOSBox‐X">Guide: Setting up printing in DOSBox-X</a></h3>
+<h3 id="_guide_setting_up_printing_in_dosbox_x"><a href="Guide%3ASetting-up-printing-in-DOSBox‐X">Guide: Setting up printing in DOSBox-X</a></h3>
 <div class="paragraph">
 <p>Explains how to use DOSBox-X&#8217;s printing feature, either to a real or a virtual printer (e.g. print to PNG or PS).</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_guide_setting_up_networking_in_dosbox_x"><a href="Guide:Setting-up-networking-in-DOSBox‐X">Guide: Setting up networking in DOSBox-X</a></h3>
+<h3 id="_guide_setting_up_networking_in_dosbox_x"><a href="Guide%3ASetting-up-networking-in-DOSBox‐X">Guide: Setting up networking in DOSBox-X</a></h3>
 <div class="paragraph">
 <p>Explains how to set up and use the network with the emulated Novell NE2000 network adapter.</p>
 </div>
