Update devel-build.html - installer now supports only from 7 onwards
Related #5052

--- a/devel-build.html
+++ b/devel-build.html
@@ -17,7 +17,7 @@ title: Development Builds
 
 {%- assign repo = "joncampbell123/dosbox-x" -%}
 {% capture workflows_list -%}
-windows-installers | 32/64-bit installers and builds for Vista+
+windows-installers | 32/64-bit installers and builds for Win7+
 vsbuild_xp | 32/64-bit installers and builds for Windows XP+
 vsbuild32 | 32-bit Visual Studio portable builds (for Vista+/ARM)
 vsbuild64 | 64-bit Visual Studio portable builds (for Vista+/ARM)
