--- a/wiki/Guide:DOS-demoscene-software-in-DOSBox‐X.html
+++ b/wiki/Guide:DOS-demoscene-software-in-DOSBox‐X.html
@@ -24,8 +24,7 @@
 <h2 id="_demo_settings_and_notes_list">Demo settings and notes list</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p><a href="Guide%3AMS‐DOS%3Ademoscene%3A1991">1991</a> * <a href="Guide%3AMS‐DOS%3Ademoscene%3A1992">1992</a> * <a href="Guide%3AMS‐DOS%3Ademoscene%3A1993">1993</a> * <a href="Guide%3AMS‐DOS%3Ademoscene%3A1994">1994</a> * <a href="Guide%3AMS‐DOS%3Ademoscene%3A1995">1995</a> * <a href="Guide%3AMS‐DOS%3Ademoscene%3A1996">1996</a> * <a href="Guide%3AMS‐DOS%3Ademoscene%3A1997">1997</a> * <a href="Guide%3AMS‐DOS%3Ademoscene%3A1998">1998</a> * <a href="Guide%3AMS‐DOS%3Ademoscene%3A1999">1999</a> *
-<a href="Guide%3AMS‐DOS%3Ademoscene%3A2000">2000</a></p>
+<p><a href="Guide%3AMS‐DOS%3Ademoscene%3A1991">1991</a> * <a href="Guide%3AMS‐DOS%3Ademoscene%3A1992">1992</a> * <a href="Guide%3AMS‐DOS%3Ademoscene%3A1993">1993</a> * 1994 * <a href="Guide%3AMS‐DOS%3Ademoscene%3A1995">1995</a> * <a href="Guide%3AMS‐DOS%3Ademoscene%3A1996">1996</a> * <a href="Guide%3AMS‐DOS%3Ademoscene%3A1997">1997</a> * 1998 * 1999 * 2000</p>
 </div>
 </div>
 </div>
