--- a/wiki/Guide:Installing-PC-DOS-7.html
+++ b/wiki/Guide:Installing-PC-DOS-7.html
@@ -143,8 +143,8 @@ You can then boot from the diskettes to install PC DOS 2000.</p>
 <h2 id="_creating_a_pc_dos_7_hdd_image">Creating a PC DOS 7 HDD image</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>The first PC DOS 7.0, revision 0 diskette is a regular 1.44MB bootable disk image, the other disks are in XDF format.
-Both types can be mounted in DOSBox-X, and therefor the installation is similar to PC DOS 6.</p>
+<p>Disk 1 of PC DOS 7.0 revision 0, is a regular 1.44MB bootable disk image, the other disks are in XDF format.
+Both image types can be mounted in DOSBox-X, and therefor the installation is similar to PC DOS 6.</p>
 </div>
 <div class="admonitionblock note">
 <table>
