--- a/wiki/Guide:Managing-image-files-in-DOSBox‐X.html
+++ b/wiki/Guide:Managing-image-files-in-DOSBox‐X.html
@@ -2429,7 +2429,7 @@ This saves disk space compared to maintaining multiple full installations, and c
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="rouge highlight"><code data-lang="console"><span class="go">imgmake hdd.vhd -t vhd -size 2097152</span></code></pre>
+<pre class="rouge highlight"><code data-lang="console"><span class="go">imgmake hdd.vhd -t vhd -size 2048</span></code></pre>
 </div>
 </div>
 <div class="paragraph">
@@ -2437,7 +2437,7 @@ This saves disk space compared to maintaining multiple full installations, and c
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="rouge highlight"><code data-lang="console"><span class="go">imgmake hdd.vhd -t hd -size 2097152</span></code></pre>
+<pre class="rouge highlight"><code data-lang="console"><span class="go">imgmake hdd.vhd -t hd -size 2048</span></code></pre>
 </div>
 </div>
 <div class="paragraph">
