--- a/wiki/Guide:Setting-up-MIDI-in-DOSBox‐X.html
+++ b/wiki/Guide:Setting-up-MIDI-in-DOSBox‐X.html
@@ -424,7 +424,7 @@ Please use <code>mididevice=fluidsynth</code> instead, with the <code>fluid.samp
 <div class="title">Note</div>
 </td>
 <td class="content">
-If a game offers a "Sound Canvas", Roland SC-55, Roland SCC-I or a Roland RAP-10 option you want to try, look at the <a href="#General-MIDI-Emulation">General MIDI Emulation</a> section below instead.
+If a game offers a "Sound Canvas", Roland SC-55, Roland SCC-I or a Roland RAP-10 option you want to try, look at the <a href="#_general_midi_emulation">General MIDI Emulation</a> section below instead.
 </td>
 </tr>
 </table>
