--- a/devel-build.html
+++ b/devel-build.html
@@ -22,7 +22,7 @@ vsbuild_xp | 32/64-bit installers and builds for Windows XP+
 vsbuild32 | 32-bit Visual Studio portable builds (for Vista+/ARM)
 vsbuild64 | 64-bit Visual Studio portable builds (for Vista+/ARM)
 mingw32 | 32-bit MinGW (for 7+) and MinGW-lowend (for XP+, W9x/NT4+) portable builds
-mingw64 | 64-bit MinGW portable builds (for 7+)
+mingw64 | 64-bit MinGW/UCRT64(experimental) portable builds (for 7+)
 linux | Linux (x86_64) builds
 macos | macOS (x86_64/ARM) builds
 hxdos | HX-DOS (x86) build
