Update Guide:Video-card-support-in-DOSBox‐X.html - MEM not crashing anymore with 736K conventional

--- a/wiki/Guide:Video-card-support-in-DOSBox‐X.html
+++ b/wiki/Guide:Video-card-support-in-DOSBox‐X.html
@@ -466,7 +466,7 @@ The vertical refresh of CGA is 60Hz, which matches up well with the majority of 
 <div class="title">Warning</div>
 </td>
 <td class="content">
-The <code>allow more than 640kb base memory</code> configuration option allows more conventional memory, for instance, in combination with CGA graphics you can have up to 736KB of base memory. But not all software is compatible with this option. Even the included <code>mem</code> command will crash if it is set.
+The <code>allow more than 640kb base memory</code> configuration option allows more conventional memory, for instance, in combination with CGA graphics you can have up to 736KB of base memory. But not all software is compatible with this option.
 </td>
 </tr>
 </table>
