add links to Dutch, Hungarian, Italian, Russian

--- a/wiki/Guide:Regional-settings-in-DOSBox‐X.html
+++ b/wiki/Guide:Regional-settings-in-DOSBox‐X.html
@@ -345,13 +345,25 @@ DOSBox-X will accept any other country code not listed above, but in that case w
 <p><a href="https://github.com/joncampbell123/dosbox-x/blob/master/contrib/translations/fr/fr_FR.lng?raw=true">fr_FR.lng</a></p>
 </li>
 <li>
+<p><a href="https://github.com/joncampbell123/dosbox-x/blob/master/contrib/translations/hu/hu_HU.lng?raw=true">hu_HU.lng</a></p>
+</li>
+<li>
+<p><a href="https://github.com/joncampbell123/dosbox-x/blob/master/contrib/translations/it/it_IT.lng?raw=true">it_IT.lng</a></p>
+</li>
+<li>
 <p><a href="https://github.com/joncampbell123/dosbox-x/blob/master/contrib/translations/ja/ja_JP.lng?raw=true">ja_JP.lng</a></p>
 </li>
 <li>
 <p><a href="https://github.com/joncampbell123/dosbox-x/blob/master/contrib/translations/ko/ko_KR.lng?raw=true">ko_KR.lng</a></p>
 </li>
 <li>
+<p><a href="https://github.com/joncampbell123/dosbox-x/blob/master/contrib/translations/nl/nl_NL.lng?raw=true">nl_NL.lng</a></p>
+</li>
+<li>
 <p><a href="https://github.com/joncampbell123/dosbox-x/blob/master/contrib/translations/pt/pt_BR.lng?raw=true">pt_BR.lng</a></p>
+</li>
+<li>
+<p><a href="https://github.com/joncampbell123/dosbox-x/blob/master/contrib/translations/ru/ru_RU.lng?raw=true">ru_RU.lng</a></p>
 </li>
 <li>
 <p><a href="https://github.com/joncampbell123/dosbox-x/blob/master/contrib/translations/tr/tr_TR.lng?raw=true">tr_TR.lng</a></p>
